# ESR-CursoDocker

modulo4/: .dockerignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
