[tool.poetry]
name = "modulo4"
version = "0.1.0"
description = "Exercicio pratico - Modulo 4"
authors = ["Marlos Ribeiro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
